# ChaTTY

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  PLATFORM.md  SETUP.md  WORK.md
src/: app.rs  config.rs  lib.rs  main.rs
src/db/: conversations.rs  file_transfers.rs  messages.rs  mod.rs  models.rs  schema.rs  users.rs
src/handlers/: commands.rs  input.rs  mod.rs  network_events.rs
src/network/: client.rs  discovery.rs  file_transfer.rs  mod.rs  protocol.rs  server.rs
src/ui/: chat_view.rs  file_transfer_ui.rs  group_panel.rs  input_bar.rs  mod.rs  popup.rs  status_bar.rs  user_list.rs
src/utils/: crypto.rs  helpers.rs  mod.rs  notifications.rs
tests/: db_tests.rs  file_transfer_tests.rs  network_tests.rs  protocol_tests.rs
