[package]
name = "ChaTTY"
version = "0.1.0"
edition = "2021"
description = "P2P LAN terminal chat application with end-to-end encryption"
license = "MIT"
repository = "https://github.com/yourusername/ChaTTY"
keywords = ["chat", "p2p", "tui", "lan", "encryption"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "ChaTTY"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Networking
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Encryption
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
rand = "0.8"

# Config
toml = "0.8"
dirs = "5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
